# C_course

./: CMakeLists.txt  README.md
MultiThreading/: CMakeLists.txt  test.cpp  threadpool.cpp  threadpool.h  worker.cpp  worker.h
MultiThreading/1_thread_pool_task/: CMakeLists.txt
MultiThreading/1_thread_pool_task/include/: thread_pool.cpp  thread_pool.h
MultiThreading/1_thread_pool_task/tests/: thread_pool.cpp
MultiThreading/2_promise_future/: CMakeLists.txt
MultiThreading/2_promise_future/include/: base_shared_state.h  future.h  promise.h  shared_state.h
MultiThreading/2_promise_future/tests/: promise_test.cpp
MultiThreading/3_flatten/: CMakeLists.txt
MultiThreading/3_flatten/include/: flatten.h  utils.h
MultiThreading/3_flatten/tests/: flatten_test.cpp
MultiThreading/4_map/: CMakeLists.txt
MultiThreading/4_map/include/: map.h  thread_pool.h
MultiThreading/4_map/tests/: map_test.cpp
MultiThreading/5_parallel/: CMakeLists.txt
MultiThreading/5_parallel/include/: thread_pool.h
MultiThreading/5_parallel/tests/: parallel_test.cpp
MultiThreading/async/: future.h  promise.h  sharedstate.h  test_async.cpp  utils.h
MultiThreading/threadpool/: test_threads.cpp  threadpool.h
Printer/: CMakeLists.txt  biginteger.cpp  biginteger.h  expression.cpp  expression.h  main.cpp  printer.cpp  printer.h  utils.cpp  utils.h
